--- a/doc/jwhois.texi
+++ b/doc/jwhois.texi
@@ -17,6 +17,7 @@
 @c \overfullrule=0pt
 @c end tex
 
+@include version.texi
 @c Combine indices.
 @synindex cp fn
 @syncodeindex vr fn
@@ -24,57 +25,45 @@
 @syncodeindex pg fn
 @syncodeindex tp fn
 
-@ifinfo
-This file documents @sc{jwhois}, a Whois client.
+@copying
+This manual is for GNU Jwhois (version @value{VERSION}, @value{UPDATED}),
+which is an extended Whois client.
 
-Copyright (C) 1999-2005, 2016  Free Software Foundation, Inc.
+Copyright @copyright{} 1999-2005, 2016  Free Software Foundation, Inc.
 
+@quotation
 Permission is granted to copy, distribute and/or modify this document
-under the terms of the GNU Free Documentation License, Version 1.1 or
+under the terms of the GNU Free Documentation License, Version 1.3 or
 any later version published by the Free Software Foundation; with no
-Invariant Sections, with the Front-Cover Texts being ``A GNU Manual,''
-and with the Back-Cover Texts as in (a) below.  A copy of the
-license is included in the section entitled ``GNU Free Documentation
-License.''
-
-(a) The FSF's Back-Cover Text is: ``You have freedom to copy and modify
-this GNU Manual, like GNU software.  Copies published by the Free
-Software Foundation raise funds for GNU development.''
-
-@end ifinfo
+Invariant Sections, with no Front-Cover Texts, and with no Back-Cover
+Texts.  A copy of the license is included in the section entitled
+``GNU Free Documentation License''.
+@end quotation
+@end copying
 
 @setchapternewpage off
 
 @titlepage
 @title jwhois
-@subtitle Version 3.2.3
-@subtitle 10 July 2005
+@subtitle for version @value{VERSION}, @value{UPDATED}
 @author Jonas Öberg @code{(jonas@@gnu.org)}
 
 @page
 @vskip 0pt plus 1filll
-Copyright @copyright{} 1999-2005  Free Software Foundation, Inc.
-
-@sp 2
-Permission is granted to copy, distribute and/or modify this document
-under the terms of the GNU Free Documentation License, Version 1.1 or
-any later version published by the Free Software Foundation; with no
-Invariant Sections, with the Front-Cover Texts being ``A GNU Manual,''
-and with the Back-Cover Texts as in (a) below.  A copy of the
-license is included in the section entitled ``GNU Free Documentation
-License.''
-
-(a) The FSF's Back-Cover Text is: ``You have freedom to copy and modify
-this GNU Manual, like GNU software.  Copies published by the Free
-Software Foundation raise funds for GNU development.''
+@insertcopying
 @end titlepage
 @page
 
+@contents
+
+
+@ifnottex
 @node Top
 @top GNU Jwhois
 
-This file documents the GNU jwhois package, an extended Whois client.
-This is edition 3.2.1, for jwhois version 3.2.3, last updated 30 June 2002.
+This manual is for GNU Jwhois (version @value{VERSION},@value{UPDATED}),
+which is an extended Whois client.
+@end ifnottex
 
 @menu
 * Introduction::                Introduction
@@ -82,6 +71,7 @@ This is edition 3.2.1, for jwhois version 3.2.3, last updated 30 June 2002.
 * Site Configuration::          Syntax of the configuration file
 * RIPE Extensions::             Extensions for RIPE databases
 * Reporting bugs::              Reporting bugs
+* GNU Free Documentation License:: Copying and sharing this documentation.
 
 @detailmenu
  --- The Detailed Node Listing ---
@@ -532,5 +522,10 @@ $ jwhois -h whois.ripe.net -- -i admin-c,tech-c,zone-c CO19-RIPE
 
 Email bug reports to @code{bug-jwhois@@gnu.org}.
 
-@contents
+
+@node GNU Free Documentation License
+@appendix GNU Free Documentation License
+
+@include fdl-1.3.texi
+
 @bye
