--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,5 @@
+GNU JWhois NEWS                                    -*- outline -*-
+
 Changes in jwhois 4.0
 
  * New feature: Configurable timeout on connects
@@ -100,3 +102,17 @@ Changes in jwhois 2.0
  * jwhois-server is dropped from the packag
  * jwhois is now written in C code.
  * configuration file format has changed.
+
+========================================================================
+Copyright (C) 1999-2016 Free Software Foundation, Inc.
+
+  Copying and distribution of this file, with or without modification,
+  are permitted in any medium without royalty provided the copyright
+  notice and this notice are preserved.
+
+Permission is granted to copy, distribute and/or modify this document
+under the terms of the GNU Free Documentation License, Version 1.3 or
+any later version published by the Free Software Foundation; with no
+Invariant Sections, with no Front-Cover Texts, and with no Back-Cover
+Texts.  A copy of the license is included in the "GNU Free
+Documentation License" file as part of this distribution.
